--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
 }
 .container div {
   display: table-cell;
+  transform: translateX(1%);
 }
 
 /** DARK MODE START */
@@ -28,8 +29,8 @@ body {
 
 .dark-mode-toggle {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 10px;
+  right: 50px;
   z-index: 9999;
 }
 
@@ -140,16 +141,21 @@ input {
   padding: 10px; /* Add some padding */
 }
 
-.dark-button {
-  background-color: #333; /* Dark background color */
-  color: #fff; /* Light text color */
+.regular-button {
   border: none; /* Remove border */
   padding: 10px 20px; /* Add some padding */
 }
 
 /* For the button element when hovered */
-.dark-button:hover {
+.regular-button:hover {
   background-color: #555; /* Darker background color on hover */
+}
+
+.dark-button {
+  background-color: #333; /* Dark background color */
+  color: #fff; /* Light text color */
+  border: none; /* Remove border */
+  padding: 10px 20px; /* Add some padding */
 }
 
 /* For the button element when focused */
@@ -163,45 +169,31 @@ input {
 
 /** index buttons start */
 .button-container {
-  position: fixed;
+  /**position: fixed;*/
   bottom: 10px;
-  left: 10%;
-  transform: translateX(-50%);
+  transform: translateX(1%);
   display: flex;
-  justify-content: center;
+  padding-top: 5px;
   gap: 10px;
 }
 
-.index-button-light {
+.index-button {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: #4CAF50;
-  color: #ffffff;
   font-size: 16px;
   cursor: pointer;
-}
-
-.index-button-light:hover {
-  background-color: #0a390c;
-}
-
-.index-button-dark {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: #2196f3;
-  color: #ffffff;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.index-button-dark:hover {
-  background-color: #0d47a1;
+  transition: color 0.3s;
+  filter: brightness(30%)
 }
 
 .current-index {
-  background-color: #032962;
-
+  filter: brightness(100%) !important;
 }
+
+.index-button:hover
+{
+  filter: brightness(70%)
+}
+
 /** index butons end */
